TEST_PROGRAMS/INVALID/luke_emery-fertitta/parse_declaration.min
# parsing error example - mixing statements and declarations

var x: int;
x = 5;
var y: float;
